@@ -1170,7 +1170,7 @@ and no value was provided for it." name))))))))))
                        :format-control
                        "~@<Constant ~2I~_~S ~Iconflicts with its ~
                             asserted type ~
-                            ~2I~_~/sb!impl::print-type-specifier/.~@:>"
+                            ~2I~_~/sb!impl:print-type-specifier/.~@:>"
                        :format-arguments (list (constant-form-value detail) atype))
                  (warn condition
                        :format-control
